k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: links-service
spec:
  selector:
    app: links-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
